@@ -16,20 +16,20 @@ import harustudy.backend.study.repository.PomodoroStudyRepository;
 import jakarta.annotation.Nullable;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-@Service
 @RequiredArgsConstructor
 @Transactional
+@Service
 public class PomodoroProgressService {
 
     private final MemberRepository memberRepository;
     private final PomodoroProgressRepository pomodoroProgressRepository;
     private final PomodoroStudyRepository pomodoroStudyRepository;
 
+    @Transactional(readOnly = true)
     public PomodoroProgressResponse findPomodoroProgress(
             AuthMember authMember, Long studyId, Long progressId
     ) {
@@ -63,6 +63,7 @@ public class PomodoroProgressService {
     }
 
     // TODO: 동적쿼리로 변경(memberId 유무에 따른 분기처리)
+    @Transactional(readOnly = true)
     public PomodoroProgressesResponse findPomodoroProgressWithFilter(
             AuthMember authMember, Long studyId, @Nullable Long memberId
     ) {
@@ -89,7 +90,7 @@ public class PomodoroProgressService {
                 pomodoroProgressRepository.findByPomodoroStudy(pomodoroStudy)
                         .stream()
                         .map(PomodoroProgressResponse::from)
-                        .collect(Collectors.toList());
+                        .toList();
         return PomodoroProgressesResponse.from(responses);
     }
 
@@ -111,7 +112,8 @@ public class PomodoroProgressService {
         pomodoroProgress.proceed();
     }
 
-    public Long participateStudy(AuthMember authMember, Long studyId, ParticipateStudyRequest request) {
+    public Long participateStudy(AuthMember authMember, Long studyId,
+            ParticipateStudyRequest request) {
         Member member = memberRepository.findByIdIfExists(request.memberId());
         validateIsSameMemberId(authMember, request.memberId());
         PomodoroStudy pomodoroStudy = pomodoroStudyRepository.findByIdIfExists(studyId);
